--- a/site/styles/home-styles.css
+++ b/site/styles/home-styles.css
@@ -56,7 +56,7 @@
 .quote {
   font-family: "Inter-Regular", Helvetica;
   font-weight: 400;
-  color: #000000;
+  color: var(--color-text);
   font-size: clamp(12px, 3vw, 32px);
   letter-spacing: 0;
   line-height: normal;
